# AI-Customer-Success-Copilot

./: .env.example  .gitignore  INBOX_README.txt  MULTI_AGENT_ARCHITECTURE.md  RAG_ARCHITECTURE.md  README.md  SYSTEM_ARCHITECTURE.md  app.py  pyproject.toml  requirements.txt  risk_analysis_report.md
agents/: __init__.py  customer_risk_agent.py
data/: customer_behavior_rules.md  sample_customer_data.csv
knowledge_base/: customer_retention.md  low_login_solutions.md  marketing_growth.md  renewal_strategy.md
reports/: enterprise_report.md  enterprise_report.pptx  latest_report.md
scripts/: init_db.py
services/: __init__.py  ppt_generator.py  report_generator.py
src/ai_cs_copilot/: __init__.py  config.py
src/ai_cs_copilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ai_cs_copilot/db/: __init__.py  sqlite_store.py
src/ai_cs_copilot/llm/: __init__.py  advisor.py
src/ai_cs_copilot/pipelines/: __init__.py  customer_analytics.py  data_paths.py
src/ai_cs_copilot/services/: __init__.py  llm_service.py  rag_service.py
storage/faiss_index/: index.faiss  index.pkl
templates/: report_template.md
tests/: __init__.py  test_customer_analytics.py  test_data_paths.py  test_llm_service.py
tools/: __init__.py  agent.py  base_tool.py  chart_tool.py  data_analysis_tool.py  insight_tool.py  ppt_tool.py  rag_query_tool.py  report_tool.py
visualizations/: __init__.py  chart_generator.py
workflows/: __init__.py  report_workflow.py
