[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-customer-success-copilot"
version = "0.1.0"
description = "AI-Customer-Success-Copilot: Enterprise-Grade AI-Powered Customer Success Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rileymisha" }]
keywords = ["customer-success", "ai", "langchain", "streamlit"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
