[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cs-copilot"
version = "0.1.0"
description = "AI 客户成功助手：经营数据分析、风险识别与报告生成"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rileymisha" }]
keywords = ["customer-success", "ai", "langchain", "streamlit"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
